<resources>
    <string name="app_name">Vocabulary Trainer</string>
    <string name="snackbar_success">Added successfully</string>
    <string name="snackbar_fail">Adding failed</string>
    <string name="button_overview">Overview</string>
    <string name="button_add_vocabulary">Add Vocabulary</string>
    <string name="button_change_language_EN">EN</string>
    <string name="button_change_language_GR">DE</string>
    <string name="button_change_language_FR">FR</string>
    <string name="add_word_german_text">German</string>
    <string name="add_word_english_text">English</string>
    <string name="add_word_button">Add</string>
    <string name="enter_your_changes">Enter your Changes</string>
    <string name="edit_word_hint_word_language_1">Language 1 (Word)</string>
    <string name="edit_word_hint_word_language_2">Language 2 (Word)</string>
    <string name="button_edit_word_submit">Submit</string>
    <string name="button_edit_word_back_to_overview">Back to Overview</string>
    <string name="button_share_vocabulary">Share</string>
    <string name="button_all_vocabulary">All vocabulary</string>
    <string name="button_some_of_the_vocabulary">Some of the vocabulary</string>


    <string name="string_study_interface">Study interface</string>
    <string name="button_backup">Backup</string>
    <string name="button_import">Import</string>
    <string name="button_export">Export</string>
    <string name="button_testing_mode" >Testing Mode</string>
    <string name="input_testing_word">Your input</string>
    <string name="button_testing_mode_word_submit">Check word</string>

    <string name="testingmode_word"><u>Word</u></string>
    <string name="testingmode_tries"><u>Tries</u></string>

    <string name="button_testing_mode_next_word">Next word</string>
    <string name="button_advanced_testing">Advanced Testing</string>
    <string name="button_study_interface_to">to</string>
    <string name="button_execute_test">Start</string>
    <string name="button_sort">Sort</string>
    <string name="button_language">Language</string>
    <string name="button_sort1">Sort A-Z [word1]</string>
    <string name="button_sort2">Sort A-Z [word2]</string>
    <string name="button_sort3">Sort Z-A [word1]</string>
    <string name="button_sort4">Sort Z-A [word2]</string>
    <string name="button_sortTag">Tag</string>
    <string name="button_sortTag1">Sort A-Z</string>
    <string name="button_sortTag2">Sort Z-A</string>
    <string name="button_filterLanguage">Language</string>
    <string name="button_filterTag">Tag</string>
    <string name="button_filter">Filter</string>
    <string name="FilterOff">Filter Off</string>
    <string name="FilterBy">Filter by </string>
</resources>
