<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/filter"
        android:title="@string/button_filter"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/filterTag"
                android:title="@string/button_filterTag"
                app:showAsAction="always">
                <menu>
                </menu>
            </item>
            <item android:id="@+id/filterLanguage"
                android:title="@string/button_filterLanguage"
                app:showAsAction="always">
            <menu>
            </menu>
            </item>
        </menu>
    </item>
    <item android:id="@+id/sort"
        android:title="@string/button_sort"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/sortLanguage"
                android:title="@string/button_language"
                app:showAsAction="always">
                <menu>
                        <item android:id="@+id/sort1"
                            android:title="@string/button_sort1"
                            android:orderInCategory="100"/>
                        <item android:id="@+id/sort2"
                            android:title="@string/button_sort2"
                            android:orderInCategory="100"/>
                        <item android:id="@+id/sort3"
                            android:title="@string/button_sort3"
                            android:orderInCategory="100"/>
                        <item android:id="@+id/sort4"
                            android:title="@string/button_sort4"
                            android:orderInCategory="100"/>
                </menu>
            </item>
            <item android:id="@+id/sortTag"
                android:title="@string/button_sortTag"
                app:showAsAction="always">
                <menu>
                    <item android:id="@+id/sortTag1"
                        android:title="@string/button_sortTag1"
                        android:orderInCategory="100"/>
                    <item android:id="@+id/sortTag2"
                        android:title="@string/button_sortTag2"
                        android:orderInCategory="100"/>
                </menu>
            </item>
        </menu>
    </item>
</menu>