<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myAddWordLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TableRow>
        <TextView
            android:id="@+id/textView_german"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_word_german_text"/>
        <EditText
            android:id="@+id/editText_german"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Hallo" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textView_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_word_english_text" />

        <EditText
            android:id="@+id/editText_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Hello" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:onClick="onButtonClickAddWord"
            android:text="@string/add_word_button" />
    </TableRow>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button_change_language_FR"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="105dp"
            android:text="@string/button_change_language_FR" />

        <Button
            android:id="@+id/button_change_language_DE"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="60dp"
            android:text="@string/button_change_language_GR" />

        <Button
            android:id="@+id/button_change_language_EN"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/button_change_language_EN" />

    </RelativeLayout>

</TableLayout>