<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestingModeActivity">

    <LinearLayout
        android:id="@+id/linearLayout_testing_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_testing_mode_word_and_language1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_testing_mode_translate_to_language2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/inputTestingWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/input_testing_word"
            android:inputType="text"
            android:importantForAutofill="yes" />

        <Button
            android:id="@+id/buttonSubmitTestingWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_testing_mode_word_submit" />
      
        <Button
            android:id="@+id/buttonNextTestingWord"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_testing_mode_next_word" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>